--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -6,7 +6,7 @@
 url=https://www.gsmarena.com
 capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-selenium_url=http://localhost:4444/wd/hub
+selenium_url=http::http://172.20.0.2:4444
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
