--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -6,7 +6,7 @@
 url=https://www.gsmarena.com
 capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-selenium_url=http:http://selenium/standalone-chrome:4444/wd/hub
+selenium_url=http:http://selenium-hub:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
