--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -4,7 +4,7 @@
 
 #=================== Global configuration ============#
 url=https://www.gsmarena.com
-capabilities.browserName=chrome
+capabilities.browserName=firefox
 capabilities.browserVersion=NULL
 selenium_url=http://selenium-hub:4444/wd/hub
 custom_capabilities=NULL
