created new tests

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -4,9 +4,9 @@
 
 #=================== Global configuration ============#
 url=https://www.gsmarena.com
-capabilities.browserName=firefox
+capabilities.browserName=safari
 capabilities.browserVersion=NULL
-selenium_url=http://selenium:4444/wd/hub
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
