added new tests

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -4,9 +4,9 @@
 
 #=================== Global configuration ============#
 url=https://www.gsmarena.com
-#capabilities.browserName=safari
+capabilities.browserName=chrome
 capabilities.browserVersion=NULL
-#selenium_url=http://localhost:4444/wd/hub
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -59,13 +59,13 @@ init_retry_interval=1
 
 #uncomment and change deviceName and platformVersion for iOS test
 #======== Local Run for iOS Mobile ===============#
-selenium_url=http://localhost:4723/wd/hub
-capabilities.platformName=iOS
-capabilities.deviceName=iPhone 12 Pro Max
-capabilities.deviceType=phone
-capabilities.platformVersion=14.4
-capabilities.automationName=XCUITest
-capabilities.udid=6C570255-E026-4E4F-8712-1A82995D2249
+#selenium_url=http://localhost:4723/wd/hub
+#capabilities.platformName=iOS
+#capabilities.deviceName=iPhone 12 Pro Max
+#capabilities.deviceType=phone
+#capabilities.platformVersion=14.4
+#capabilities.automationName=XCUITest
+#capabilities.udid=6C570255-E026-4E4F-8712-1A82995D2249
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.zip
 #=====================================================#
 
