added new tests

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,8 +3,8 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
-capabilities.browserName=chrome
+url=https://www.saucedemo.com
+capabilities.browserName=safari
 capabilities.browserVersion=NULL
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
